--- a/SearchImg/style.css
+++ b/SearchImg/style.css
@@ -9,19 +9,29 @@ body{
     color: #F1E3D3;
 }
 .container{
-    height: 100vh;
-    max-width: 600px;
+    max-width: 750px;
     display: flex;
     justify-content: center;
     text-align: center;
-    
-    margin: auto;
+    margin: 40px auto;
     flex-direction: column;
 }
 .container h1{
     text-align: center;
-    font-size: 44px;
+    font-size: 54px;
     font-family: cursive;
+
+}
+.container p{
+    margin: auto;
+    max-width:200px;
+    padding: 10px;
+    border-radius: 2px;
+    background: white;
+    color: #1a1a1a;
+    font-weight: 500;
+    text-align: center;
+
 }
 .Inputs{
     padding: 20px;
@@ -52,4 +62,18 @@ input{
     color: white;
 
     cursor: pointer;
+}
+#output{
+    width: 100%;
+    margin: 40px auto 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+#output img{
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 5px;
 }
