--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -1,88 +1,242 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html, body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
+#page1 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #efeae3;
+  position: relative;
 
-#page1{
-    height: 100vh;
+  padding: 0 2vw;
+}
+
+nav {
+  padding: 2vw;
+  width: 100%;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#nav-2 {
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+}
+
+#nav-2 h4 {
+  padding: 10px 20px;
+  border: 1px solid rgb(158, 158, 158);
+  border-radius: 50px;
+  font-weight: 500;
+  color: #252525;
+  transition: all 0.4s ease;
+  font-size: 18px;
+  overflow: hidden;
+
+  position: relative;
+}
+#nav-2 h4::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  left: 0;
+  bottom: -100%;
+  border-radius: 50%;
+
+  transition: all 0.4s ease;
+}
+#nav-2 h4:hover::after {
+  top: 0;
+  border-radius: 0;
+}
+
+#nav-2 h4 a {
+  text-decoration: none;
+  color: #252525;
+  z-index: 1;
+  position: relative;
+}
+#nav-2 h4:hover a {
+  color: white;
+}
+
+#center {
+  height: 65vh;
+  width: 100%;
+  /* background-color: orange; */
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  border-bottom: 1px solid grey;
+  padding-bottom: 2vw;
+}
+
+#left h3 {
+  width: 30vw;
+  font-size: 2vw;
+}
+
+#right h1 {
+  font-size: 10vw;
+  line-height: 9vw;
+  text-align: right;
+}
+#page1 video {
+  border-radius: 30px;
+  margin-top: 4vh;
+  width: 100%;
+  position: relative;
+}
+
+#hero-shape {
+  position: absolute;
+  width: 50vw;
+  height: 36vw;
+  right: 0;
+  top: 70vh;
+}
+
+.hero-1 {
+  height: 100%;
+  width: 100%;
+  background-color: #fe320a;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+}
+.hero-2 {
+  height: 30vh;
+  width: 30vw;
+  background: linear-gradient(#fe320a, #fe740a);
+  border-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+
+  animation: anime2 5s linear infinite alternate;
+}
+.hero-3 {
+  height: 30vh;
+  width: 30vw;
+  background: linear-gradient(#fe320a, #fe740a);
+  border-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+
+  animation: anime1 3s linear infinite alternate;
+}
+@keyframes anime1 {
+    from{
+        transform: translate(55%, -2%);
+    }
+    to{
+        transform: translate(-10%, 10%);
+    }
+}
+@keyframes anime2 {
+    from{
+        transform: translate(5%, -5%);
+    }
+    to{
+        transform: translate(-20%, 20%);
+    }
+}
+
+#page2{
+    min-height: 100vh;
     width: 100%;
-    background-color: #EFEAE3;
+    padding: 8vw 0;
+    background-color: #efeae3;
     position: relative;
 }
 
-nav{
-    padding: 2vw;
-    width: 100%;
-    /* background-color: red; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-#nav-2{
-    display: flex;
-    align-items: center;
-    gap: 1vw;
+#moving-text{
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
-#nav-2 h4{
-    padding: 10px 20px;
-    border: 1px solid rgb(158, 158, 158);
-    border-radius: 50px;
-    font-weight: 500;
-    color: #252525;
-    transition: all 0.4s ease;
-    font-size: 18px;
-    overflow: hidden;
-    
-    position: relative;
-}
-#nav-2 h4::after{
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    left: 0;
-    bottom: -100%;
-    border-radius: 50%;
-    
-    transition: all 0.4s ease;
-
-}
-#nav-2 h4:hover::after{
-    top: 0;
-    border-radius: 0;
+#moving-text::-webkit-scrollbar{
+  display: none;
 }
 
-#nav-2 h4 a{
-    text-decoration: none;
-    color: #252525;
-    z-index: 9;
-    position: relative;
+#moving-text h1{
+    font-size: 9vw;
+    display: inline-block;
 }
-#nav-2 h4:hover a{
-    color: white;
-}
-
-#center{
-    height: 65vh;
-    width: 100%;
-    background-color: orange;
-
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
+.con{
+  white-space: nowrap;
+  display: inline-block;
+  animation: move 10s linear infinite;
 }
 
-#left h3{
-    width: 30vw;
-    font-size: 3vw;
+.dot{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: #fe320a;
+  display: inline-block;
+  margin: 1vw 2vw 0;
+}
+
+@keyframes move {
+  from{
+    transform: translate(0);
+  }
+  to{
+    transform: translate(-100%);
+  }
+}
+
+#page2-bottom{
+  height: 80vh;
+  width: 100%;
+  padding: 4.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+#page2-bottom h1{
+  font-size: 3.5vw;
+  width:50%;
+  line-height: 3vw;
+  z-index: 9;
+}
+
+#bottom2{
+  width:20%;
+
+}
+#bottom2 img{
+  width: 100%;
+  border-radius: 15px;
+}
+#bottom2 p{
+  font-weight: 400;
+}
+
+#page2-bottom #gooey{
+  position: absolute;
+  height: 30vw;
+  width: 30vw;
+  border-radius: 50%;
+  background-color: #fe320a;
+  top: 58%;
+  left: 25%;
+  filter: blur(20px);
 }
