--- a/musicPlayer/style.css
+++ b/musicPlayer/style.css
@@ -7,6 +7,8 @@
     font-family: 'Poppins';
 }
 body, html{
+    background-color: black;
+    color: white;
     width: 100%;
     height: 100%;
 }
@@ -24,7 +26,67 @@ body, html{
 }
 
 .home ul li{
-    margin-top: 7px;
     text-decoration: none;
     list-style: none;
+    padding-top: 10px;
+    font-weight: bold;
+}
+
+.heading{
+    padding-top: 10px;
+    width: 100%;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.lib{
+    min-height: 80vh;
+}
+
+.right{
+    margin: 16px 0;    
+    position: relative;
+}
+
+.header{
+    display: flex;
+}
+
+.musicPlaylist{
+    padding: 16px;
+
+}
+
+.cardContainer{
+    margin: 20px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+.card{
+    width: 200px;
+    overflow: hidden;
+    padding: 10px;
+    background-color: #252525;
+}
+
+.card > *{
+    padding-top: 5px;
+}
+
+.card img{
+    width: 100%;
+    object-fit: contain;
+}
+
+
+.playbar{
+    position: absolute;
+    bottom: 0;
+    background: green;
+    width: 100%;
+    padding: ;
 }
