--- a/personalPortfolio/style.css
+++ b/personalPortfolio/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
@@ -12,7 +11,7 @@ body,
 html {
   height: 100%;
   width: 100%;
-  background-color: #FAF9F6;
+  background-color: #faf9f6;
   color: white;
 }
 
@@ -83,6 +82,33 @@ a:hover {
 }
 
 /* smooth transition */
-body, .home-info, .f-h1, a, p, img{
-    transition: all 0.2s ease-in-out;
+body,
+.home-info,
+.f-h1,
+a,
+p,
+img {
+  transition: all 0.2s ease-in-out;
+}
+
+/* responsive */
+
+@media (max-width: 768px) {
+  nav {
+    height: 10vh;
+    padding: 0 10px;
+  }
+  main {
+    padding: 18px;
+  }
+  .home-info h1 {
+    font-size: 30px;
+  }
+  .about-me {
+    padding: 0 auto;
+  }
+  .blog {
+    /* color: rgb(65, 65, 65); */
+    line-height: 23px;
+  }
 }
